Made a fetch call for the stocks

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 ALPHA_VANTAGE_API_KEY=ZGSHY8P1ARG7GYXW
 marketstack= a059e648b060d9a499baea435a5895e9
+
+APCA_API_KEY_ID=PKE9H0WNQCGSYTC1I20B
+APCA_API_SECRET_KEY=haQI94OtNBb9HGQXTxz0c2z1OhZ1Il6SBhIJzyLm
