--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.19",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.2",
     "papaparse": "^5.4.1",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
