--- a/package.json
+++ b/package.json
@@ -4,35 +4,46 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
+    "@mui/styled-engine-sc": "^6.0.1",
+    "@mui/x-charts": "^7.15.0",
+    "@mui/x-data-grid-pro": "^7.15.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.19",
+    "highcharts": "^11.4.8",
+    "highcharts-react-official": "^3.2.1",
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.2",
     "papaparse": "^5.4.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-sparklines": "^1.7.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "reselect": "^5.1.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
