--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mui/styled-engine-sc": "^6.0.1",
     "@mui/x-charts": "^7.15.0",
     "@mui/x-data-grid-pro": "^7.15.0",
+    "@polygon.io/client-js": "^7.3.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^22.5.5",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
@@ -27,6 +29,7 @@
     "history": "^5.3.0",
     "jwt-decode": "^4.0.0",
     "ldrs": "^1.0.2",
+    "os": "^0.1.2",
     "papaparse": "^5.4.1",
     "qs": "^6.13.0",
     "react": "^18.3.1",
@@ -45,7 +48,9 @@
     "reselect": "^5.1.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yahoo-finance": "^0.3.8",
+    "yahoo-finance2": "^2.11.3"
   },
   "scripts": {
     "start": "react-scripts start",
